--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.70.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -23,7 +24,9 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "^7.32.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0"
