--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "axios": "^1.1.3",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-safe-area-context": "^4.4.1",
