--- a/ios/BookClub/Info.plist
+++ b/ios/BookClub/Info.plist
@@ -36,7 +36,33 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Inter-Bold.otf</string>
+		<string>Inter-Medium.otf</string>
+		<string>Inter-Regular.otf</string>
+		<string>Inter-SemiBold.otf</string>
+		<string>Lato-Black.ttf</string>
+		<string>Lato-Bold.ttf</string>
+		<string>Lato-Heavy.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Zocial.ttf</string>
+		<string>Fontisto.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,31 +77,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Inter-Bold.otf</string>
-		<string>Inter-Medium.otf</string>
-		<string>Inter-Regular.otf</string>
-		<string>Inter-SemiBold.otf</string>
-		<string>Lato-Black.ttf</string>
-		<string>Lato-Bold.ttf</string>
-		<string>Lato-Heavy.ttf</string>
-    <string>AntDesign.ttf</string>
-     <string>Entypo.ttf</string>
-     <string>EvilIcons.ttf</string>
-     <string>Feather.ttf</string>
-     <string>FontAwesome.ttf</string>
-     <string>FontAwesome5_Brands.ttf</string>
-     <string>FontAwesome5_Regular.ttf</string>
-     <string>FontAwesome5_Solid.ttf</string>
-     <string>Foundation.ttf</string>
-     <string>Ionicons.ttf</string>
-     <string>MaterialIcons.ttf</string>
-     <string>MaterialCommunityIcons.ttf</string>
-     <string>SimpleLineIcons.ttf</string>
-     <string>Octicons.ttf</string>
-     <string>Zocial.ttf</string>
-     <string>Fontisto.ttf</string>
-	</array>
 </dict>
 </plist>
