--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
