--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
