--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "axios": "^1.1.3",
+    "@tanstack/react-query": "^4.13.4",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-flash-message": "^0.3.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
